exchange app updated to include updated links of url

--- a/app/templates/verification.html
+++ b/app/templates/verification.html
@@ -13,11 +13,11 @@
 </style>
 <body>
     <div style="display:flex; align-items:center; justify-content:center; flex-direction:column">
-        <img src="./btc-nation.jpg" alt="btc-nation-logo">
+        <img src="https://img.icons8.com/cotton/344/digital-signature.png" alt="btc-logo">
         <h3>Email Verification Successfully</h3>
         <br>
         <br>
-        <p>Thank you for choosing Btc-Nation, please Login back to your account and start trading</p>
+        <p>Thank you for choosing Exchange App, please Login back to your account and start trading</p>
     </div>
 </body>
 </html>
