--- a/app/templates/verification.html
+++ b/app/templates/verification.html
@@ -12,8 +12,8 @@
     }
 </style>
 <body>
-    <div style="display:flex; align-items:center; justify-content:center; flex-direction:column">
-        <img src="https://img.icons8.com/cotton/344/digital-signature.png" alt="btc-logo">
+    <div style="display:flex; margin-top:150px;align-items:center; justify-content:center; flex-direction:column">
+        <img style="width: 100px;" src="https://img.icons8.com/cotton/344/digital-signature.png" alt="btc-logo">
         <h3>Email Verification Successfully</h3>
         <br>
         <br>
